--- a/analysis/index.html
+++ b/analysis/index.html
@@ -1539,12 +1539,12 @@ a{ color:inherit; }
 }
 </script>
 <script src="/assets/js/88st-analytics.js"></script>
-<link href="/assets/88st-theme.css?v=20260210_B7" rel="stylesheet"/>
-<script defer="" src="/assets/88st-theme.js?v=20260210_B7"></script>
-<link href="/assets/88st-tool-history.css?v=20260210_B6" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B6"></script>
-<link href="/assets/88st-shell.css?v=20260210_B6" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260210_B7"></script>
+<link href="/assets/88st-theme.css?v=20260210_5" rel="stylesheet"/>
+<script defer="" src="/assets/88st-theme.js?v=20260210_5"></script>
+<link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
+<link href="/assets/88st-shell.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260210_B5"></script>
 </head>
 <body>
 <!-- ✅ 사칭주의 팝업 (1일 1회) -->
