--- a/bonus-checklist/index.html
+++ b/bonus-checklist/index.html
@@ -427,12 +427,12 @@ a{ color:inherit; }
 }
 </script>
 <script src="/assets/js/88st-analytics.js"></script>
-<link href="/assets/88st-theme.css?v=20260210_B7" rel="stylesheet"/>
-<script defer="" src="/assets/88st-theme.js?v=20260210_B7"></script>
-<link href="/assets/88st-tool-history.css?v=20260210_B6" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B6"></script>
-<link href="/assets/88st-shell.css?v=20260210_B6" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260210_B7"></script>
+<link href="/assets/88st-theme.css?v=20260210_5" rel="stylesheet"/>
+<script defer="" src="/assets/88st-theme.js?v=20260210_5"></script>
+<link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
+<link href="/assets/88st-shell.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260210_B5"></script>
 </head>
 <body>
 <section aria-label="랜딩 바로가기" class="rel-links" style="margin-top:16px;">
