--- a/tool/overround/index.html
+++ b/tool/overround/index.html
@@ -217,13 +217,13 @@ a{ color:inherit; }
 <script src="/assets/js/88st-analytics.js"></script>
 <script defer="" src="/assets/js/vendor-teasers.js"></script>
 <link href="/assets/vendor-teasers.css?v=20260210_4" rel="stylesheet"/>
-<link href="/assets/88st-theme.css?v=20260210_B7" rel="stylesheet"/>
-<script defer="" src="/assets/88st-theme.js?v=20260210_B7"></script>
-<link href="/assets/88st-tool-history.css?v=20260210_B6" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-tool-history.js?v=20260210_B6"></script>
-<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B6"></script>
-<link href="/assets/88st-shell.css?v=20260210_B6" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260210_B7"></script>
+<link href="/assets/88st-theme.css?v=20260210_5" rel="stylesheet"/>
+<script defer="" src="/assets/88st-theme.js?v=20260210_5"></script>
+<link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-tool-history.js?v=20260210_B5"></script>
+<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
+<link href="/assets/88st-shell.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260210_B5"></script>
 </head>
 <body>
 <div class="wrap">
