--- a/speed/index.html
+++ b/speed/index.html
@@ -127,12 +127,12 @@
 <body>
   <div class="st-landing-wrap">
     
-    <a class="st-landing-cover" href="/analysis/" aria-label="클릭하여 분석기로 이동">
+    <a class="st-landing-cover" href="http://spd-7575.com/?code=88ST" aria-label="클릭하여 분석기로 이동">
       <img src="/img/img99.webp" alt="88ST.CLOUD 랜딩 이미지" loading="eager"/>
       <div class="st-landing-overlay" aria-hidden="true"></div>
       <div class="st-landing-caption" aria-hidden="true">
         <p class="t">SPEED 안내</p>
-        <p class="d">클릭하면 분석기로 이동합니다. 상담이 필요하면 텔레그램 문의를 이용하세요.</p>
+        <p class="d">클릭하면 스피드벳으로 이동합니다. 상담이 필요하면 텔레그램 문의를 이용하세요.</p>
         <div class="st-landing-pill">🔎 안내 페이지</div>
       </div>
     </a>
