--- a/ok/index.html
+++ b/ok/index.html
@@ -84,7 +84,7 @@
 <body>
   <div class="st-landing-wrap">
     
-    <a class="st-landing-cover" href="http://ok-8888.com/?code=88ST" aria-label="클릭하여 오케이벳으로 이동">
+    <a class="st-landing-cover" href="ok-8888.com/?code=88ST" aria-label="클릭하여 오케이벳으로 이동">
       <img src="/img/img98.webp" alt="88ST.CLOUD 랜딩 이미지" loading="eager"/>
       <div class="st-landing-overlay" aria-hidden="true"></div>
       <div class="st-landing-caption" aria-hidden="true">
