--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
 <!-- 88 MAIN LUXE v13.1 (v12 기능 유지) -->
 <!-- ===== SEO 기본 세팅 ===== -->
-<title>88st.cloud | 배당 구조 분석기 · 리스크 관리 · 보증 업체</title>
+<title>88st.cloud | 스포츠 배당 분석기 · 스포츠 배당 마진 계산기 · 먹튀검증 안전놀이터 ·안전한토토사이트</title>
 <meta content="88 — 스포츠 배당 분석기와 배당 마진(오버라운드) 계산기를 무료로 제공합니다. 분석기 사용 안내와 인증 놀이터 정보를 한 곳에서 확인하세요." name="description">
 <link href="https://88st.cloud/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
