--- a/index_fixed.html
+++ b/index_fixed.html
@@ -1835,8 +1835,8 @@ const INSIGHTS_BY_SPORT = {
 <script defer="" src="/assets/88st-theme.js?v=20260210_5"></script>
 </meta><link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
-<link href="/assets/88st-shell.css?v=20260210_B5" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260210_B5"></script>
+<link href="/assets/88st-shell.css?v=20260210_LUX2" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260210_LUX2"></script>
 </head>
 <body>
 <div aria-hidden="true" id="loader">
