--- a/speed/index.html
+++ b/speed/index.html
@@ -143,7 +143,7 @@
     텔레그램 상담문의
   </a>
 
-  <script defer src="/assets/js/88st-shell.js?v=20260210_B5"></script>
+  <script defer src="/assets/js/88st-shell.js?v=20260210_LUX2"></script>
   <script defer src="/assets/js/88st-tool-history.js?v=20260210_B5"></script>
 </body>
 </html>
