--- a/tool/fair-odds/index.html
+++ b/tool/fair-odds/index.html
@@ -222,8 +222,8 @@ a{ color:inherit; }
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-tool-history.js?v=20260210_B5"></script>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
-<link href="/assets/88st-shell.css?v=20260210_B5" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260210_B5"></script>
+<link href="/assets/88st-shell.css?v=20260210_LUX2" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260210_LUX2"></script>
 </head>
 <body>
 <div class="wrap">
