--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -62,8 +62,8 @@ input,select{width:100%;padding:11px 12px;border-radius:14px;border:1px solid rg
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-tool-history.js?v=20260210_B5"></script>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
-<link href="/assets/88st-shell.css?v=20260210_B5" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260210_B5"></script>
+<link href="/assets/88st-shell.css?v=20260210_LUX2" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260210_LUX2"></script>
 </head>
 <body>
 <div class="wrap">
