--- a/index.html
+++ b/index.html
@@ -1719,7 +1719,7 @@ const CARD_DATA = {
   card1:{ title:"어느날", code:"ST95", link:"http://oday-147.com", telegram:"UZU59",
     benefit:"고액전용 전용 무제제 삼치기OK / 입금플러스5+2 10+3 20+4 외 첫충 10%",
     notice:"가입코드 미입력 시 혜택 적용 불가" },
-  card2:{ title:"OK Bet", code:"88ST", link:"/ok/", telegram:"UZU59",
+  card2:{ title:"OK Bet", code:"88ST", link:"https://ok-8888.com/?code=88ST", telegram:"UZU59",
     benefit:"신규가입 77만원 쿠폰지급, 코인 입/출금 가능, 롤 세트별 베팅, 벤픽 후 마감, BJ, 스타리그 업데이트",
     notice:"가입코드 미입력 시 혜택 적용 불가" },
   card3:{ title:"SPEED Bet", code:"88ST", link:"/speed/", telegram:"UZU59",
