--- a/index.html
+++ b/index.html
@@ -1980,7 +1980,7 @@ const INSIGHTS_BY_SPORT = {
 <div class="v-small" id="cleanHint">정제된 문구: 카드 혜택 문구를 짧고 깔끔하게 보여줍니다.</div>
 </div>
 <div class="vendor-sections" id="vendorTop">
-<section class="vendor-section" data-section="guarantee">
+<section class="vendor-section" id="vendors-guarantee" data-section="guarantee">
 <div class="vendor-section-head">
 <div class="vsh-left">
 <span class="vsh-title">보증 </span>
@@ -1992,7 +1992,7 @@ const INSIGHTS_BY_SPORT = {
 </div>
 <div class="vendor-grid" id="vendorGridGuarantee"></div>
 </section>
-<section class="vendor-section" data-section="verified">
+<section class="vendor-section" id="vendors-verified" data-section="verified">
 <div class="vendor-section-head">
 <div class="vsh-left">
 <span class="vsh-title">인증 </span>
