--- a/ipl/index.html
+++ b/ipl/index.html
@@ -333,7 +333,7 @@ a{ color:inherit; }
 <div class="header">
 <div class="nav">
 <a href="../">메인</a>
-<a href="../analysis.html">분석기</a>
+<a href="/analysis/">분석기</a>
 <a class="active" href="./">입플/보너스</a>
 <a href="../minigame/">동행 미니게임</a>
 <a href="../casino/">카지노</a>
@@ -373,7 +373,7 @@ a{ color:inherit; }
 <b>팁:</b> “받는 %”보다 <b>환전조건/제한</b>이 전환/만족을 좌우합니다.
       </div>
 <div class="btnRow">
-<a class="btn blue" href="../analysis.html">마진·EV 분석기 사용</a>
+<a class="btn blue" href="/analysis/">마진·EV 분석기 사용</a>
 <a class="btn gold" href="https://t.me/UZU59" rel="noopener" target="_blank">조건 문의(텔레그램)</a>
 </div>
 </div>
