--- a/minigame/index.html
+++ b/minigame/index.html
@@ -249,7 +249,7 @@ a{ color:inherit; }
 <div class="header">
 <div class="nav">
 <a href="../">메인</a>
-<a href="../analysis.html">분석기</a>
+<a href="/analysis/">분석기</a>
 <a href="../ipl/">입플/보너스</a>
 <a class="active" href="./">동행 미니게임</a>
 <a href="../casino/">카지노</a>
@@ -292,7 +292,7 @@ a{ color:inherit; }
 <li>문의 대응 속도/처리 기록</li>
 </ul>
 <div class="btnRow">
-<a class="btn blue" href="../analysis.html">배당·마진·EV 분석기</a>
+<a class="btn blue" href="/analysis/">배당·마진·EV 분석기</a>
 <a class="btn gold" href="https://t.me/UZU59" rel="noopener" target="_blank">조건/문의(텔레그램)</a>
 </div>
 </div>
