--- a/slot/index.html
+++ b/slot/index.html
@@ -246,7 +246,7 @@ a{ color:inherit; }
 <div class="header">
 <div class="nav">
 <a href="../">메인</a>
-<a href="../analysis.html">분석기</a>
+<a href="/analysis/">분석기</a>
 <a href="../ipl/">입플/보너스</a>
 <a href="../minigame/">동행 미니게임</a>
 <a href="../casino/">카지노</a>
@@ -286,7 +286,7 @@ a{ color:inherit; }
 <b>팁:</b> 고액 유저는 “광고성 문구”보다 <b>규정 투명성</b>을 더 중요하게 봅니다.
       </div>
 <div class="btnRow">
-<a class="btn blue" href="../analysis.html">분석기(마진/EV)</a>
+<a class="btn blue" href="/analysis/">분석기(마진/EV)</a>
 <a class="btn gold" href="https://t.me/UZU59" rel="noopener" target="_blank">문의(텔레그램)</a>
 </div>
 </div>
