--- a/analysis/index.html
+++ b/analysis/index.html
@@ -218,7 +218,7 @@ body{
 .st-r-tab:active{ transform:translateY(0) scale(.99); }
 .st-r-tab.on{ background:rgba(var(--accentRGB),.16); border-color:rgba(var(--accentRGB),.30); }
 .st-r-tab:focus-visible{ outline:2px solid rgba(var(--accentRGB),.55); outline-offset:2px; }
-.st-r-meta{ margin-left:auto; font-size:11px; font-weight:900; color:rgba(255,255,255,.66); }
+.st-r-meta{ margin-left:auto; font-size:11px; font-weight:900; color:var(--muted); }
 
 .st-r-panel{ display:block; }
 .st-r-panel[hidden]{ display:none; }
@@ -1624,7 +1624,7 @@ a{ color:inherit; }
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
 <link href="/assets/88st-shell.css?v=20260210_LUX2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260210_LUX2"></script>
+<script defer="" src="/assets/js/88st-shell.js?v=20260211_POL2"></script>
 </head>
 <body>
 <!-- ✅ 사칭주의 팝업 (1일 1회) -->
