--- a/index.html
+++ b/index.html
@@ -1846,7 +1846,7 @@ const INSIGHTS_BY_SPORT = {
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
 </meta><link href="/assets/88st-shell.css?v=20260210_LUX2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260210_LUX2"></script>
+<script defer="" src="/assets/js/88st-shell.js?v=20260211_POL2"></script>
 </head>
 <body>
 <div aria-hidden="true" id="loader">
@@ -3487,7 +3487,7 @@ function openFromUrl() {
       if(!histList) return;
       const arr = loadHist();
       if(!arr.length){
-        histList.innerHTML = '<div class="text" style="color:rgba(255,255,255,.55);font-size:12px;">저장된 메모가 없습니다.</div>';
+        histList.innerHTML = '<div class="text" style="color:var(--muted);font-size:12px;">저장된 메모가 없습니다.</div>';
         return;
       }
       histList.innerHTML = arr.map((it, idx)=>{
