--- a/casino-strategy/paroli/index.html
+++ b/casino-strategy/paroli/index.html
@@ -20,7 +20,7 @@
 
   <script defer src="/assets/theme-preset.js"></script>
   <link rel="stylesheet" href="/assets/88st-shell.css?v=20260211_v22_casino1"/>
-  <script defer src="/assets/js/88st-shell.js?v=20260211_v22_casino1"></script>
+  <script defer src="/assets/js/88st-shell.js?v=20260211_POL2"></script>
   <link rel="stylesheet" href="/assets/88st-strategy-landing.css?v=20260211_v22_casino1"/>
 
   <script type="application/ld+json">
