--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -18,7 +18,7 @@
   <script defer src="/assets/theme-preset.js"></script>
   <link rel="stylesheet" href="/assets/88st-casino-strategies.css?v=20260211_v22_casino1"/>
   <link rel="stylesheet" href="/assets/88st-shell.css?v=20260211_v22_casino1"/>
-  <script defer src="/assets/js/88st-shell.js?v=20260211_v22_casino1"></script>
+  <script defer src="/assets/js/88st-shell.js?v=20260211_POL2"></script>
   <script defer src="/assets/js/88st-casino-strategies.js?v=20260211_v22_casino1"></script>
 
   <script type="application/ld+json">
