--- a/index.html
+++ b/index.html
@@ -1846,7 +1846,7 @@ const INSIGHTS_BY_SPORT = {
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
 </meta><link href="/assets/88st-shell.css?v=20260210_LUX2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260211_POL3"></script>
+<script defer="" src="/assets/js/88st-shell.js?v=20260211_PREM1"></script>
 </head>
 <body>
 <div aria-hidden="true" id="loader">
@@ -1941,6 +1941,36 @@ const INSIGHTS_BY_SPORT = {
 </a>
 </div>
 </div>
+
+<!-- Casino analyzer (added under WHY section) -->
+<div aria-label="카지노 전략 분석기" class="odds-summary-card" style="margin-top:14px;">
+  <div class="odds-summary-row" style="grid-template-columns:1.2fr 1fr 1fr;">
+    <div class="odds-metric">
+      <div class="odds-metric-title"><span class="badge" style="margin-right:8px;">CASINO</span>바카라 프리셋</div>
+      <div class="odds-metric-value">2.00 / 1.97</div>
+      <div class="odds-metric-sub">PLAYER / BANKER</div>
+    </div>
+    <div class="odds-metric">
+      <div class="odds-metric-title">전략</div>
+      <div class="odds-metric-value" style="font-size:15px;">마틴·파롤리</div>
+      <div class="odds-metric-sub">달랑·오스카·피보·라부</div>
+    </div>
+    <div class="odds-metric">
+      <div class="odds-metric-title">세션 운영</div>
+      <div class="odds-metric-value" style="font-size:15px;">WIN/LOSE</div>
+      <div class="odds-metric-sub">UNDO · MDD · 회복 1승</div>
+    </div>
+  </div>
+  <div class="odds-summary-note" style="margin:10px 0 0;">
+    턴이 빠른 바카라에서도 <b>다음 베팅</b>을 즉시 계산하고, 세션 기록으로 <b>리스크</b>를 함께 관리합니다.
+  </div>
+  <div class="odds-summary-cta">
+    <a class="insight-btn secondary" data-cta="why_to_casino" href="/tool-casino/" style="text-decoration:none; display:inline-flex; align-items:center; gap:8px; padding:10px 12px; border-radius:12px; margin-top:12px;">
+      카지노 분석기 열기 <span aria-hidden="true">→</span>
+    </a>
+  </div>
+</div>
+
 </div>
 <div aria-label="카드 검색 및 필터" class="vendor-tools">
 <input autocomplete="off" class="v-input" id="searchInput" placeholder="업체 검색 (예: SPEED OK 어느날 )"/>
