--- a/ipl/index.html
+++ b/ipl/index.html
@@ -311,7 +311,7 @@ a{ color:inherit; }
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
 <link href="/assets/88st-shell.css?v=20260210_LUX2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260211_POL3"></script>
+<script defer="" src="/assets/js/88st-shell.js?v=20260211_PREM1"></script>
 </head>
 <body>
 <div id="loader">
