--- a/ok/index.html
+++ b/ok/index.html
@@ -100,7 +100,7 @@
     텔레그램 상담문의
   </a>
 
-  <script defer src="/assets/js/88st-shell.js?v=20260211_POL3"></script>
+  <script defer src="/assets/js/88st-shell.js?v=20260211_PREM1"></script>
   <script defer src="/assets/js/88st-tool-history.js?v=20260210_B5"></script>
 </body>
 </html>
