--- a/index.html
+++ b/index.html
@@ -1841,8 +1841,8 @@ const INSIGHTS_BY_SPORT = {
 </script>
 <link href="assets/mobile-polish.css?v=2" rel="stylesheet"/>
 <script src="/assets/js/88st-analytics.js"></script>
-<link href="/assets/88st-theme.css?v=20260210_5" rel="stylesheet"/>
-<script defer="" src="/assets/88st-theme.js?v=20260210_5"></script>
+<link href="/assets/88st-theme.css?v=20260212_T2" rel="stylesheet"/>
+<script defer="" src="/assets/88st-theme.js?v=20260212_T2"></script>
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
 </meta><link href="/assets/88st-shell.css?v=20260210_LUX2" rel="stylesheet"/>
@@ -1914,8 +1914,10 @@ const INSIGHTS_BY_SPORT = {
     • <b>공정배당·정규화 확률</b>로 시장이 말하는 확률을 한 번에 확인<br/>
     • (고급) <b>내 예상 확률</b>을 넣으면 EV/비중까지 계산해 “PASS/주의/추천”을 바로 표시
   </div>
-<div aria-label="예시" class="odds-summary-card" style="margin-top:12px;">
-<div class="odds-summary-row" style="grid-template-columns:1.2fr 1fr 1fr;">
+<div class="why-duo" aria-label="WHY 요약 카드" style="margin-top:12px;">
+
+<div aria-label="예시" class="odds-summary-card">
+<div class="odds-summary-row">
 <div class="odds-metric">
 <div class="odds-metric-title">예시 (2-way)</div>
 <div class="odds-metric-value">1.90 / 1.90</div>
@@ -1943,8 +1945,8 @@ const INSIGHTS_BY_SPORT = {
 </div>
 
 <!-- Casino analyzer (added under WHY section) -->
-<div aria-label="카지노 전략 분석기" class="odds-summary-card" style="margin-top:14px;">
-  <div class="odds-summary-row" style="grid-template-columns:1.2fr 1fr 1fr;">
+<div aria-label="카지노 전략 분석기" class="odds-summary-card">
+  <div class="odds-summary-row">
     <div class="odds-metric">
       <div class="odds-metric-title"><span class="badge" style="margin-right:8px;">CASINO</span>바카라 프리셋</div>
       <div class="odds-metric-value">2.00 / 1.97</div>
@@ -1969,6 +1971,8 @@ const INSIGHTS_BY_SPORT = {
       카지노 분석기 열기 <span aria-hidden="true">→</span>
     </a>
   </div>
+</div>
+
 </div>
 
 </div>
