--- a/speed/index.html
+++ b/speed/index.html
@@ -10,8 +10,8 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
-  <link rel="stylesheet" href="/assets/88st-theme.css?v=20260210_5"/>
-  <script defer src="/assets/88st-theme.js?v=20260210_5"></script>
+  <link rel="stylesheet" href="/assets/88st-theme.css?v=20260212_T2"/>
+  <script defer src="/assets/88st-theme.js?v=20260212_T2"></script>
 
   <style>
     *{box-sizing:border-box;}
